fixed controls select text wrapping bug

--- a/src/options/components/ui/Controls/controls.pcss
+++ b/src/options/components/ui/Controls/controls.pcss
@@ -9,8 +9,16 @@
         position: relative;
 
         .controls__action {
-            width: 170px;
-            max-width: 40%;
+            flex: 0 0 auto;
+            max-width: 50%;
+            display: flex;
+            align-items: flex-start;
+            justify-content: flex-end;
+
+            .select,
+            .select__btn {
+                width: 100%;
+            }
         }
     }
 
