--- a/src/options/components/ui/Select/select.pcss
+++ b/src/options/components/ui/Select/select.pcss
@@ -15,9 +15,6 @@
         line-height: 1.3;
         transform: var(--t3) color;
         text-align: right;
-        white-space: normal;
-        /* In case if select is placed in div with fixed width */
-        width: 100%;
         overflow: hidden;
 
         &-text {
